--- a/shufl-web/src/assets/scss/wide-container.scss
+++ b/shufl-web/src/assets/scss/wide-container.scss
@@ -34,6 +34,8 @@
     align-items: center;
 
     p {
+        width: 100%;
+
         color: $tertiary-foreground-colour;
 
         font-size: 1.75em;
