Fixed up error handling

--- a/shufl-web/src/app/components/group/group-suggestion-list/group-suggestion/group-suggestion.component.html
+++ b/shufl-web/src/app/components/group/group-suggestion-list/group-suggestion/group-suggestion.component.html
@@ -2,7 +2,7 @@
     <p class="group-suggestion-added-date">{{ groupSuggestion.createdOn | date: 'EEEE dd MMMM yyyy'}}</p>
     <div class="group-suggestion-data-container">
         <div class="album-container">
-            <div app-album-icon [album]="groupSuggestion.album" [enabled]="false"></div>
+            <div app-album-icon [album]="groupSuggestion.album" [disabled]="true"></div>
         </div>
         <div class="rating-container">
             <app-group-suggestion-rating [rating]="overallRating" *ngIf="overallRatingCalculated"></app-group-suggestion-rating>
