UI clean up and Codacy Fixes

--- a/shufl-web/src/app/components/shared/group/dialogs/add-to-group/add-to-group.component.scss
+++ b/shufl-web/src/app/components/shared/group/dialogs/add-to-group/add-to-group.component.scss
@@ -11,6 +11,10 @@
     }
 
     .groups-list-container {
+        min-height: 100px;
+
+        position: relative;
+
         .groups-list {
             max-height: 500px;
 
