--- a/shufl-web/src/app/components/shared/navigation/nav-bar/nav-bar.component.html
+++ b/shufl-web/src/app/components/shared/navigation/nav-bar/nav-bar.component.html
@@ -4,4 +4,5 @@
     <app-nav-bar-item [itemData]="searchItem" [active]="searchActive"></app-nav-bar-item>
     <app-nav-bar-item [itemData]="groupsItem" [active]="groupsActive"></app-nav-bar-item>
     <app-nav-bar-item [itemData]="userItem" [active]="userActive"></app-nav-bar-item>
+    <p class="version">V{{ appVersion }}</p>
 </div>
