Setup Spotify linking

--- a/shufl-web/src/app/components/user/account/account.component.html
+++ b/shufl-web/src/app/components/user/account/account.component.html
@@ -3,5 +3,6 @@
         <h1>{{ userDisplayName }}</h1>
 
         <app-button [buttonText]="'Log Out'" (click)="logout()"></app-button>
+        <app-button [buttonText]="'Link Spotify'" (click)="linkSpotify()"></app-button>
     </div>
 </div>
