--- a/shufl-web/src/app/components/shared/navigation/card-nav-bar/card-nav-bar.component.html
+++ b/shufl-web/src/app/components/shared/navigation/card-nav-bar/card-nav-bar.component.html
@@ -50,4 +50,36 @@
             <path stroke="#adadad" fill="#adadad" d="m408 184h-136c-4.417969 0-8-3.582031-8-8v-136c0-22.089844-17.910156-40-40-40s-40 17.910156-40 40v136c0 4.417969-3.582031 8-8 8h-136c-22.089844 0-40 17.910156-40 40s17.910156 40 40 40h136c4.417969 0 8 3.582031 8 8v136c0 22.089844 17.910156 40 40 40s40-17.910156 40-40v-136c0-4.417969 3.582031-8 8-8h136c22.089844 0 40-17.910156 40-40s-17.910156-40-40-40zm0 0"/>
         </svg>
     </div>
+    <div class="queue-button navigation-button" (click)="queueButtonClicked()" *ngIf="queueVisible">
+        <svg enable-background="new 0 0 64 64" height="512" viewBox="0 0 64 64" width="512" xmlns="http://www.w3.org/2000/svg">
+            <g>
+                <g>
+                    <g>
+                        <path stroke="#adadad" fill="#adadad" d="m49.9 59.9c-.3 0-.7-.1-1-.2l-18.9-10.3c-.7-.4-1.1-1-1-1.8 0-.7.4-1.4 1.1-1.8l18.9-9.5c.6-.3 1.4-.3 2 .1s1 1 1 1.7v19.8c0 .7-.4 1.4-1 1.7-.4.2-.7.3-1.1.3zm-14.6-12.2 12.6 6.8v-13.2z" />
+                    </g>
+                </g>
+            </g>
+            <g>
+                <g>
+                    <g>
+                        <path stroke="#adadad" fill="#adadad" d="m50 18h-45c-1.1 0-2-.9-2-2s.9-2 2-2h45c1.1 0 2 .9 2 2s-.9 2-2 2z" />
+                    </g>
+                </g>
+            </g>
+            <g>
+                <g>
+                    <g>
+                        <path stroke="#adadad" fill="#adadad" d="m50 34h-45c-1.1 0-2-.9-2-2s.9-2 2-2h45c1.1 0 2 .9 2 2s-.9 2-2 2z" />
+                    </g>
+                </g>
+            </g>
+            <g>
+                <g>
+                    <g>
+                        <path stroke="#adadad" fill="#adadad" d="m25 50h-20c-1.1 0-2-.9-2-2s.9-2 2-2h20c1.1 0 2 .9 2 2s-.9 2-2 2z" />
+                    </g>
+                </g>
+            </g>
+        </svg>
+    </div>
 </div>
