Setup Group Suggestion Paging

--- a/shufl-web/src/app/app.component.html
+++ b/shufl-web/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-stage">
-    <div class="stage">
+    <div class="stage" #stage>
         <router-outlet></router-outlet>
     </div>
     <div class="nav-bar-container">
