--- a/shufl-web/src/app/components/group/group-suggestion-list/group-suggestion-list.component.scss
+++ b/shufl-web/src/app/components/group/group-suggestion-list/group-suggestion-list.component.scss
@@ -27,4 +27,10 @@
             font-size: 1.75em;
         }
     }
+
+    .loading-icon-container {
+        height: 125px;
+
+        position: relative;
+    }
 }
