--- a/shufl-web/src/app/components/shared/group/dialogs/group-members/group-member/group-member.component.html
+++ b/shufl-web/src/app/components/shared/group/dialogs/group-members/group-member/group-member.component.html
@@ -1,1 +1,4 @@
-<p>group-member works!</p>
+<div class="group-member-container">
+    <app-user-icon [user]="groupMember" [enabled]="false"></app-user-icon>
+    <p>{{ groupMember.displayName }}</p>
+</div>
