Added version number to user account page

--- a/shufl-web/src/app/components/user/account/account.component.html
+++ b/shufl-web/src/app/components/user/account/account.component.html
@@ -25,7 +25,10 @@
                     </div>
                 </div>
             </div>
-            
+
+            <div class="version-container">
+                <p class="version">V{{ appVersion }}</p>
+            </div>
         </div>
 
         <app-loading-icon *ngIf="isLoading"></app-loading-icon>
