--- a/shufl-web/src/app/components/user/account/account.component.scss
+++ b/shufl-web/src/app/components/user/account/account.component.scss
@@ -70,6 +70,14 @@
                     }
                 }
             }
+
+            .version-container {
+                p {
+                    color: $tertiary-foreground-colour;
+
+                    text-align: center;
+                }
+            }
         }
     }
 }
