Fixed calculation for iOS bottom bar

--- a/shufl-web/src/app/app.component.scss
+++ b/shufl-web/src/app/app.component.scss
@@ -32,7 +32,7 @@
 @supports (-webkit-touch-callout: none) {
     .app-stage {
         .nav-bar-container.is-app {
-            height: calc($nav-bar-height + 20px);
+            height: calc(#{$nav-bar-height} + 25px);
         }
     }
 }
