--- a/shufl-web/src/app/components/shared/group/group-suggestion-rating/group-suggestion-rating.component.html
+++ b/shufl-web/src/app/components/shared/group/group-suggestion-rating/group-suggestion-rating.component.html
@@ -27,10 +27,10 @@
             </p>
         </div>
         <div class="category-rating">
-            <p class="rating-title">Composition</p>
+            <p class="rating-title">Structure</p>
             <p class="rating">
-                {{ compositionRating }}/10
-                <small class="rating-count">({{ compositionRatingsCount }})</small>
+                {{ structureRating }}/10
+                <small class="rating-count">({{ structureRatingsCount }})</small>
             </p>
         </div>
     </div>
