--- a/shufl-web/src/app/components/album/album.component.scss
+++ b/shufl-web/src/app/components/album/album.component.scss
@@ -36,13 +36,12 @@
             }
 
             .action-buttons-container {
-                height: 140px;
+                height: 210px;
 
                 margin: 10px 10px;
 
                 display: flex;
                 flex-direction: column;
-                justify-content: space-between;
 
                 opacity: 0;
 
@@ -52,6 +51,10 @@
                     opacity: 1;
 
                     pointer-events: initial;
+                }
+
+                * {
+                    margin-bottom: 5px;
                 }
             }
         }
