--- a/shufl-web/src/app/components/group/group.component.scss
+++ b/shufl-web/src/app/components/group/group.component.scss
@@ -39,10 +39,99 @@
                     margin-top: 15px;
                 }
 
+                .tab-container {
+                    width: 100%;
+
+                    position: relative;
+
+                    .tab-tray {
+                        padding-bottom: 5px;
+
+                        display: flex;
+                        flex-direction: row;
+    
+                        .tab {
+                            width: 50%;
+    
+                            color: $tertiary-foreground-colour;
+    
+                            font-size: 1.75em;
+    
+                            cursor: pointer;
+                            user-select: none;
+    
+                            &:hover,
+                            &.active {
+                                color: $primary-foreground-colour;
+                            }
+                        }
+                    }
+
+                    .tab-marker {
+                        width: 50%;
+                        height: 5px;
+
+                        background-color: $secondary-foreground-colour;
+
+                        position: absolute;
+                        bottom: 0;
+
+                        -webkit-transition: left 0.25s ease-in-out;
+                        -moz-transition: left 0.25s ease-in-out;
+                        transition: left 0.25s ease-in-out;
+                        
+                        &.left {
+                            left: 0;
+                        }
+
+                        &.right {
+                            left: 50%
+                        }
+                    }
+                }
+
                 .divider {
                     height: 2px;
 
                     margin-top: 5px;
+                }
+            }
+        }
+
+        .group-lists-stage {
+            width: 100%;
+
+            position: relative;
+
+            // display: flex;
+            // flex-direction: row;
+            display: -webkit-box;
+
+            overflow-x: hidden;
+
+            .group-list {
+                width: 100%;
+
+                position: relative;
+
+                -webkit-transition: left 0.25s ease-in-out;
+                -moz-transition: left 0.25s ease-in-out;
+                transition: left 0.25s ease-in-out;
+
+                &.group-suggestion-list {
+                    left: -100%;
+
+                    &.active {
+                        left: 0%;
+                    }
+                }
+
+                &.group-playlist-list {
+                    left: 100%;
+
+                    &.active {
+                        left: -100%;
+                    }
                 }
             }
         }
