--- a/shufl-web/src/styles.scss
+++ b/shufl-web/src/styles.scss
@@ -39,6 +39,10 @@ body {
 
     font-family: Arial, Helvetica, sans-serif;
 
+    div {
+        -webkit-tap-highlight-color: transparent;
+    }
+
     p {
         margin: 0;
     }
