--- a/shufl-web/src/app/components/group/group-suggestion-list/group-suggestion-list.component.html
+++ b/shufl-web/src/app/components/group/group-suggestion-list/group-suggestion-list.component.html
@@ -1,4 +1,4 @@
-<div class="group-suggestion-list-container">
+<div class="group-suggestion-list-container" #groupSuggestionListContainer>
     <div class="group-suggestion-list" *ngIf="groupSuggestions != null && groupSuggestions.length > 0">
         <div app-group-suggestion
             *ngFor="let groupSuggestion of groupSuggestions" 
