Setup adding playlists to group

--- a/shufl-web/src/app/components/group/group.component.html
+++ b/shufl-web/src/app/components/group/group.component.html
@@ -11,7 +11,7 @@
                 <a (click)="viewGroupMembers()">{{ group.members.length }} members</a>
 
                 <div class="action-button-container">
-                    <app-button [buttonText]="primaryButtonText" (click)="addNewAlbumClicked()"></app-button>
+                    <app-button [buttonText]="primaryButtonText" (click)="addToGroupClicked()"></app-button>
                 </div>
 
                 <div class="tab-container">
