--- a/shufl-web/src/app/components/group/group.component.scss
+++ b/shufl-web/src/app/components/group/group.component.scss
@@ -49,17 +49,17 @@
 
                         display: flex;
                         flex-direction: row;
-    
+
                         .tab {
                             width: 50%;
-    
+
                             color: $tertiary-foreground-colour;
-    
+
                             font-size: 1.75em;
-    
+
                             cursor: pointer;
                             user-select: none;
-    
+
                             &:hover,
                             &.active {
                                 color: $primary-foreground-colour;
@@ -79,13 +79,13 @@
                         -webkit-transition: left 0.25s ease-in-out;
                         -moz-transition: left 0.25s ease-in-out;
                         transition: left 0.25s ease-in-out;
-                        
+
                         &.left {
                             left: 0;
                         }
 
                         &.right {
-                            left: 50%
+                            left: 50%;
                         }
                     }
                 }
