--- a/shufl-web/src/styles.scss
+++ b/shufl-web/src/styles.scss
@@ -1,7 +1,7 @@
 @import "src/assets/scss/variables/colours";
 @import "src/assets/scss/variables/dimensions";
 @import "~@angular/material/theming";
-@import '~ngx-toastr/toastr';
+@import "~ngx-toastr/toastr";
 @include mat-core();
 
 html {
@@ -114,22 +114,22 @@ body {
 @media (min-width: 1500px) {
     ::-webkit-scrollbar {
         width: $scrollbar-width;
-    
+
         border-radius: $scrollbar-border-radius;
     }
-    
+
     ::-webkit-scrollbar-track {
         background: $primary-background-colour;
-    
+
         border-radius: $scrollbar-border-radius;
     }
-    
+
     ::-webkit-scrollbar-thumb {
         background: $scrollbar-thumb-colour;
-    
+
         border-radius: $scrollbar-border-radius;
     }
-    
+
     ::-webkit-scrollbar-thumb:hover {
         background: $scrollbar-thumb-hover-colour;
     }
